syntax = "proto3";

option java_multiple_files = true;
option java_package = "ltd.evilcorp.rbtsrv.grpcsrv";
option java_outer_classname = "HelloProto";

package hello;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
